[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/dialog_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/components/transition_button/transition_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/themes/global.tres" type="Theme" id=3]
[ext_resource path="res://assets/images/temp/temp_ui_carrot.png" type="Texture" id=4]
[ext_resource path="res://scenes/ui/level_outro_dialog.gd" type="Script" id=5]

[node name="LevelOutro" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 703, -41 )
theme = ExtResource( 3 )
script = ExtResource( 5 )

[node name="DialogBackground" parent="." instance=ExtResource( 1 )]

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.109804, 0.0588235, 0, 1 )
polygon = PoolVector2Array( 37, 33, 102, 331, 427, 347, 463, 21 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.5
margin_top = -119.5
margin_right = 107.5
margin_bottom = 119.5
custom_constants/separation = 20

[node name="ResultsLabel" type="Label" parent="VBoxContainer"]
margin_right = 215.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 0.498039, 0.164706, 1 )
text = "Good job!"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 215.0
margin_bottom = 125.0
grow_horizontal = 2
alignment = 1

[node name="ScoreCarrot1" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 69.0
margin_bottom = 85.0
texture = ExtResource( 4 )

[node name="ScoreCarrot2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 73.0
margin_right = 142.0
margin_bottom = 85.0
texture = ExtResource( 4 )

[node name="ScoreCarrot3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 146.0
margin_right = 215.0
margin_bottom = 85.0
texture = ExtResource( 4 )

[node name="ContinueBtn" type="Button" parent="VBoxContainer"]
margin_top = 145.0
margin_right = 215.0
margin_bottom = 182.0
text = "Continue"

[node name="MainMenuBtn" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 202.0
margin_right = 215.0
margin_bottom = 239.0
text = "Main Menu"
align = 1
scene_to_load = "res://scenes/etc/title.tscn"

[connection signal="pressed" from="VBoxContainer/ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
